--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="loading_indicator">Loading …</string>
+    <string name="jokes_service_url">http://10.0.3.2:8080/_ah/api/</string>
 </resources>
